# BIT-CS

./: README.md
人工智能基础/1/: classify.py  config.py  cut.py  distinguish.py  makedata.py
人工智能基础/2/: function.py  gui.py  main.py
人工智能基础/3/: ElitismGA.txt  ElitismGa.py  Ga.py  initdata.py  train.py
人工智能基础/4/: AlphaZero.py  AlphaZeroMCTS.py  Board.py  Game.py  Gui.py  Net.py  Player.py  PolicyValue.py  PureMCTS.py  TreeNode.py  config.py  main.py  train.py
操作系统实验/6/: CMakeLists.txt  cd.cpp  cd.h  close.cpp  close.h  create.cpp  create.h  delete.cpp  delete.h  exit.cpp  exit.h  ls.cpp  ls.h  main.cpp  main.h  makefile  mkdir.cpp  mkdir.h  new.cpp  new.h  open.cpp  open.h  read.cpp  read.h  rmdir.cpp  rmdir.h  sfs.cpp  sfs.h  utils.cpp  utils.h  write.cpp  write.h
汇编语言与接口技术/: FileCompare.asm  FileCopy.asm  MulCal.asm
知识工程/1/: Const.py  GetPair.py  MakeDir.py  NER.py  Test.txt  Validation.txt
知识工程/2/: Const.py  GetPair.py  NER.py  Self_word.ipynb  VecPre.py
知识工程/3/: DataProcess.py  NER.py  VecPre.py
知识工程/4/: DataPre.py  Predicct.py  Weibo.py
自然语言理解初步/big1/: Readme.md
自然语言理解初步/big2/: Readme.md
计算机专业基础实习/: makesql.sql  version.md
计算机专业基础实习/Mail_server/: CMakeLists.txt  Mail_server.pro  main.cpp  serverwidget.cpp  serverwidget.h  serverwidget.ui
计算机专业基础实习/mailbox/: all.h  already.cpp  already.h  already.ui  draft.cpp  draft.h  draft.ui  forget.cpp  forget.h  forget.ui  login.cpp  login.h  login.ui  mailbox.pro  mailbox_zh_CN.ts  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  read.cpp  read.h  read.ui  readwithfile.cpp  readwithfile.h  recieve.cpp  (+13 more)
软件工程基础/: check.py  get_number.py  get_operator.py  get_problem.py  main.py  problem_fraction.txt  problem_int.txt  quiz.py  solve.py  test.py
(+8470 files in other folders)
